# disagree

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
agree/: metrics.py
annotations/: agreements.py  metrics.py  visualisation.py
annotations/test/: test_metrics.py
disagree/: __init__.py  agreements.py  metrics.py  plot_utils.py  utils.py
disagree/.ipynb_checkpoints/: test_ordinal-checkpoint.ipynb
disagree/disagree.egg-info/: PKG-INFO  SOURCES.txt
disagree/test/: test_metrics.py  test_visualisation.py
notebooks/: Untitled.ipynb  Untitled1.ipynb  metrics_example.ipynb  visualisation_example.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  metrics_example-checkpoint.ipynb  visualisation_example-checkpoint.ipynb
test/: test_metrics.py  test_visualisation.py
