[metadata]
name = disagree
version = 1.2.8
author = Oliver Price
author_email = op.oliverprice@gmail.com
description = Visual and statistical assessment of annotator agreements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/o-P-o/disagree/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    numpy
    pandas
    mathx
    scipy
    tqdm

